added test pages to create no dialog version of multi view

--- a/src/behaviors/guuey-form-validation-behavior.html
+++ b/src/behaviors/guuey-form-validation-behavior.html
@@ -53,7 +53,7 @@
             this.setDefaultContent(input);
           }.bind(this));
         }.bind(this));
-        
+
         this.set("pageAttached", true);
       },
 
@@ -187,7 +187,7 @@
             this.fire('openToast', {toastText: toastMessage});
           } else {
             this.fire('closeToast');
-            this.autoValidateValid = true;
+            this.set("autoValidateValid", true);
           };
         }
       },
