--- a/src/elements/admin-drawer/admin-drawer.html
+++ b/src/elements/admin-drawer/admin-drawer.html
@@ -161,7 +161,7 @@ drawer for admin functions
       </app-toolbar>
       <paper-listbox>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="adrawer-list" role="navigation">
-          <a name="ad-dash" on-tap="close" href$="/[[home]]/admin/ad-dash/[[admin]]" tabindex="-1">
+          <a name="ad-dash" on-tap="close" href$="/[[home]]/admin/ad-dash" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="icons:dashboard" item-icon></iron-icon>
@@ -170,7 +170,7 @@ drawer for admin functions
             </paper-item>
           </a>
 
-          <a name="ad-profile" on-tap="close" href$="/[[home]]/admin/ad-profile/[[admin]]" tabindex="-1">
+          <a name="ad-profile" on-tap="close" href$="/[[home]]/admin/ad-profile" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="social:location-city" item-icon></iron-icon>
@@ -179,7 +179,7 @@ drawer for admin functions
             </paper-item>
           </a>
 
-          <a name="ad-payment" on-tap="close" href$="/[[home]]/admin/ad-payment/[[admin]]" tabindex="-1">
+          <a name="ad-payment" on-tap="close" href$="/[[home]]/admin/ad-payment" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="icons:payment" item-icon></iron-icon>
@@ -188,7 +188,7 @@ drawer for admin functions
             </paper-item>
           </a>
 
-          <a name="ad-users" on-tap="close" href$="/[[home]]/admin/ad-users/[[admin]]" tabindex="-1">
+          <a name="ad-users" on-tap="close" href$="/[[home]]/admin/ad-users" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="social:group" item-icon></iron-icon>
@@ -197,7 +197,7 @@ drawer for admin functions
             </paper-item>
           </a>
 
-          <a name="ad-settings" on-tap="close" href$="/[[home]]/admin/ad-settings/[[admin]]" tabindex="-1">
+          <a name="ad-settings" on-tap="close" href$="/[[home]]/admin/ad-settings" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="icons:settings" item-icon></iron-icon>
@@ -206,7 +206,7 @@ drawer for admin functions
             </paper-item>
           </a>
 
-          <a name="ad-reports" on-tap="close" href$="/[[home]]/admin/ad-reports/[[admin]]" tabindex="-1">
+          <a name="ad-reports" on-tap="close" href$="/[[home]]/admin/ad-reports" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="icons:assessment" item-icon></iron-icon>
@@ -215,7 +215,7 @@ drawer for admin functions
             </paper-item>
           </a>
 
-          <a name="ad-support" on-tap="close" href$="/[[home]]/admin/ad-support/[[admin]]" tabindex="-1">
+          <a name="ad-support" on-tap="close" href$="/[[home]]/admin/ad-support" tabindex="-1">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="communication:live-help" item-icon></iron-icon>
@@ -249,11 +249,6 @@ drawer for admin functions
     Polymer({
       is:'admin-drawer',
       properties:{
-        //admin string... may be redundant at this point...
-        admin: {
-          type:String,
-          value:"default"
-        },
         //the current home for the account in use... calculated on main app page
         home: {
           type:String,
