--- a/test/ad-payment.html
+++ b/test/ad-payment.html
@@ -19,10 +19,10 @@
       <template>
         <firebase-app
           name="main"
-          auth-domain="careplan-c2677.firebaseapp.com"
-          database-url="https://careplan-c2677.firebaseio.com"
-          api-key="AIzaSyBdtmHIV_7epC0OBiXkTNoqrGRspA58Epc"
-          storage-bucket="careplan-c2677.appspot.com">
+          auth-domain="mosaic-dev-b7ffe.firebaseapp.com"
+          database-url="https://mosaic-dev-b7ffe.firebaseio.com"
+          api-key="AIzaSyDDsDCie-Fy_zDDMW7bCNF5alEOx-SxbrU"
+          storage-bucket="mosaic-dev-b7ffe.appspot.com">
         </firebase-app>
       </template>
     </test-fixture>
