--- a/src/pages/admin/ad-users.html
+++ b/src/pages/admin/ad-users.html
@@ -36,9 +36,9 @@
 
     <firebase-app
       name="user2"
-      auth-domain="careplan-c2677.firebaseapp.com"
-      api-key="AIzaSyBdtmHIV_7epC0OBiXkTNoqrGRspA58Epc"
-      database-url="https://careplan-c2677.firebaseio.com">
+      auth-domain="mosaic-dev-b7ffe.firebaseapp.com"
+      database-url="https://mosaic-dev-b7ffe.firebaseio.com"
+      api-key="AIzaSyDDsDCie-Fy_zDDMW7bCNF5alEOx-SxbrU">
     </firebase-app>
 
     <firebase-auth
