--- a/src/behaviors/payment-check-behavior.html
+++ b/src/behaviors/payment-check-behavior.html
@@ -34,8 +34,9 @@
           this.restrictToastText = 'Due to non payment, your accounts have been locked. Please update payment information in order to continue using Mosaic.'
           this.restrictDialogText = 'Due to non payment, your account has been locked. Please inform your supervisor that valid payment information is needed in order to continue usage of mosaic.';
           if(currentUserType === 'admin' || currentUserType === 'manager') {
-            this.set('catData.category', 'admin');
-            this.set("pageData.page", 'ad-payment');
+            var url = '/' + this.home + '/admin/ad-payment';
+            window.history.pushState({}, null, url);
+            window.dispatchEvent(new CustomEvent('location-changed'));
             this.fire('openToast', {toastText: this.restrictToastText});
           } else {
             this.$.lockedDialog.open();
