--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -27,6 +27,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding:0;
       margin:0;
     }
+
+    .back-button-disabled {
+      opacity: .3;
+      transition: all .5s;
+    }
+
     .drawer-list a {
       display: block;
       line-height: 40px;
