--- a/src/elements/guuey-notify/guuey-notify.html
+++ b/src/elements/guuey-notify/guuey-notify.html
@@ -133,9 +133,9 @@
         type: Boolean,
         value: false
       },
+
       home: {
-        type: String,
-        vlaue: "default"
+        type: String
       }
 
     },
