--- a/src/elements/su-header/su-header.html
+++ b/src/elements/su-header/su-header.html
@@ -224,7 +224,7 @@
         <iron-image
           class="headerProfileImage"
           sizing="cover"
-          placeholder="../../../images/defaultAvatar.png"
+          placeholder="/images/defaultAvatar.png"
           preload
           fade
           src="[[suIndexData.image]]">
