--- a/src/pages/care-plan/su-goals-edit.html
+++ b/src/pages/care-plan/su-goals-edit.html
@@ -21,7 +21,7 @@
 
 <link rel="import" href="../../styles/common-styles.html" />
 
-<dom-module id="test-edit">
+<dom-module id="su-goals-edit">
   <template>
 
     <media-queries
@@ -252,7 +252,7 @@
   <script>
 
       Polymer({
-        is: 'test-edit',
+        is: 'su-goals-edit',
 
         properties: {
 
